grammar.js
    start: $ => choice(
      $.program_definition,
      $.copybook_definition
      //optional($.function_definition) //todo
    ),

    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      choice($._IDENTIFICATION, $._ID_ABBR), $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    program_name: $ => choice(
      $._WORD,
      $._LITERAL
    ),

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_content)
    ),

    _procedure_division_content: $ => prec.right(choice(
      // Case 1: trailing statements group (with period) and optional statements
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        $._procedure_division_statements_before_header,
        repeat($._tail_statement)
      ),
      // Case 2: one or more (statements+period) followed by headers, finishing at a header
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        ))
      ),
      // Case 3: trailing simple statements only
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._tail_statement)
      )
    )),

    exec_statement: $ => prec.right(seq(
      $._EXEC,
      choice(
        seq($._SQL, repeat(choice($.exec_text, /\r?\n/))),
        seq($._CICS, $.cics_command),
        seq($._DLI, repeat(choice($.exec_text, /\r?\n/))),
        seq($._SQLIMS, repeat(choice($.exec_text, /\r?\n/)))
      ),
      choice(
        seq($._END_EXEC, optional('.')),
        '.' // some dialects terminate EXEC blocks with a period
      )
    )),

    cics_command: $ => choice(
      $.cics_link_command,
      $.cics_xctl_command,
      $.cics_send_command,
      $.cics_receive_command,
      $.cics_return_command,
      $.cics_read_command,
      $.cics_write_command,
      $.cics_delete_command,
      $.cics_inquire_command,
      $.cics_handle_command,
      $.cics_syncpoint_command,
      $.cics_asktime_command,
    ),

    // CICS LINK command
    cics_link_command: $ => seq(
      $._CICS_LINK,
      seq($._CICS_PROGRAM, '(', field('program', choice($._string, alias($.WORD, $.user_defined_word))), ')'),
      optional(seq($._CICS_COMMAREA, '(', field('commarea', alias($.WORD, $.user_defined_word)), ')')),
      optional(seq($._CICS_LENGTH, '(', field('length', choice($.number, alias($.WORD, $.user_defined_word))), ')')),
      optional(seq($._CICS_RESP, '(', field('resp', alias($.WORD, $.user_defined_word)), ')')),
      optional(seq($._CICS_RESP2, '(', field('resp2', alias($.WORD, $.user_defined_word)), ')'))
    ),

    // CICS XCTL command
    cics_xctl_command: $ => seq(
      $._CICS_XCTL,
      seq($._CICS_PROGRAM, '(', field('program', choice($._string, alias($.WORD, $.user_defined_word))), ')'),
      optional(seq($._CICS_COMMAREA, '(', field('commarea', alias($.WORD, $.user_defined_word)), ')')),
      optional(seq($._CICS_LENGTH, '(', field('length', choice($.number, alias($.WORD, $.user_defined_word))), ')'))
    ),

    // CICS SEND command
    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    number: $ => choice($.integer, $.decimal),
    integer: $ => /[+-]?[0-9,]+/,
    _string: $ => choice(
      $.string,
      $.x_string,
      $.n_string,
      $.h_string
    ),

    string: $ => choice(
      /('[^'\n]*')+/,
      /("[^"\n]*")+/,
      $._multiline_string,
    ),

    _CICS: $ => /[cC][iI][cC][sS]/,
    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _EXEC: $ => /[eE][xX][eE][cC]/,
    _END_EXEC: $ => /[eE][nN][dD]-[eE][xX][eE][cC]/,
    _SQL: $ => /[sS][qQ][lL]/,
    _DLI: $ => /[dD][lL][iI]/,
    _SQLIMS: $ => /[sS][qQ][lL][iI][mM][sS]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _ID_ABBR: $ => /[iI][dD]/,
    _PROCEDURE: $ => /[pP][rR][oO][cC][eE][dD][uU][rR][eE]/,
    _PROGRAM_ID: $ => /[pP][rR][oO][gG][rR][aA][mM]-[iI][dD]/,
    _WORD: $ => /([0-9][a-zA-Z0-9-]*[a-zA-Z][a-zA-Z0-9-]*)|([a-zA-Z][a-zA-Z0-9-]*)/,
    _CICS_LINK: $ => /[lL][iI][nN][kK]/,
    _CICS_XCTL: $ => /[xX][cC][tT][lL]/,
    _CICS_PROGRAM: $ => /[pP][rR][oO][gG][rR][aA][mM]/,
    _CICS_COMMAREA: $ => /[cC][oO][mM][mM][aA][rR][eE][aA]/,
    _CICS_LENGTH: $ => /[lL][eE][nN][gG][tT][hH]/,
    _CICS_RESP: $ => /[rR][eE][sS][pP]/,
    _CICS_RESP2: $ => /[rR][eE][sS][pP]2/,
